<resources>
    <string name="app_name"> 農業產銷履歷追蹤 </string>
    <string name="hello_tv"> Welcome to the Agriculture System </string>
    <string name="ic_calendar_description"></string>
    <string name="ic_hearing_description"></string>
    <string name="ic_keyboard_description"></string>
    <string name="ic_qr_code_description"></string>
    <string name="ic_correct_description"></string>
    <string name="login_bt"> 登入 </string>
    <string name="submit_bt"> 送出 </string>
    <string name="modify_bt"> 新增/修改 </string>
    <string name="cancel_bt"> 返回 </string>
    <string name="register_bt"> 註冊 </string>
    <string name="register_success"> 註冊成功 </string>
    <string name="register_fail"> 註冊失敗，請稍後再試 </string>
    <string name="login_fail"> 登入失敗，請稍後再試 </string>
    <string name="server_error"> 伺服器異常 </string>
    <string name="preference_file_key">R08922123</string>
    <string name="correct_tv"> 錯誤辨識詞彙 </string>
    <string name="corrected_tv"> 正確辨識詞彙 </string>
    <string name="hint_correct_et"> 請輸入錯誤詞彙 </string>
    <string name="hint_corrected_et"> 請輸入正確詞彙 </string>
    <string name="product_tv"> 產品名稱 </string>
    <string name="job_tv"> 工作項目 </string>
    <string name="location_tv"> 生產地點 </string>
    <string name="tool_tv"> 使用工具 </string>
    <string name="tool_type_tv"> 工具種類 </string>
    <string name="input_method_tv"> 輸入方式 </string>
    <string name="hearing_pitch_tv"> speech pitch </string>
    <string name="hearing_speed_tv"> speech speed </string>
    <string name="hearing_off_tb"> Off </string>
    <string name="hearing_on_tb"> On </string>
    <string name="calendar_tv"> 天氣觀測站 </string>
    <string name="calendar_marker">起始插秧日、第一追肥日、...、穗肥日、追肥日、收割日</string>
</resources>