<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CorrectActivity">
    <TextView
        android:id="@+id/correct_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/correct_tv"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@id/corrected_tv"
        app:layout_constraintTop_toTopOf="parent" />
    <TextView
        android:id="@+id/corrected_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/corrected_tv"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toRightOf="@id/correct_tv"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
    <EditText
        android:id="@+id/correct_et"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="text"
        android:hint="@string/hint_correct_et"
        android:ems="8"
        android:textAlignment="center"
        app:layout_constraintTop_toBottomOf="@id/correct_tv"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@id/corrected_et"
        />
    <EditText
        android:id="@+id/corrected_et"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="text"
        android:hint="@string/hint_corrected_et"
        android:ems="8"
        android:textAlignment="center"
        app:layout_constraintTop_toBottomOf="@id/corrected_tv"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toRightOf="@id/correct_et"
        />
    <Button
        android:id="@+id/correct_submit_bt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/submit_bt"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@id/correct_cancel_bt"
        app:layout_constraintTop_toBottomOf="@id/correct_et"
        android:onClick="correctSubmitClick"/>
    <Button
        android:id="@+id/correct_cancel_bt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cancel_bt"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toRightOf="@id/correct_submit_bt"
        app:layout_constraintTop_toBottomOf="@id/corrected_et"
        android:onClick="correctCancelClick"/>

</androidx.constraintlayout.widget.ConstraintLayout>