<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:screenOrientation="portrait"
    tools:context=".CalendarActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="400dp"
        android:id="@+id/calendar_ly"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        >
        <sun.bob.mcalendarview.MCalendarView
            android:id="@+id/calendar_cv"
            android:layout_width="match_parent"
            android:layout_height="400dp"
            android:firstDayOfWeek="2" />

    </LinearLayout>


    <TextView
        android:id="@+id/calendar_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="5"
        android:text="@string/calendar_tv"
        android:textSize="18sp"
        android:gravity="center"
        app:layout_constraintTop_toBottomOf="@id/calendar_ly"
        app:layout_constraintBottom_toTopOf="@id/calendar_et"
        app:layout_constraintRight_toLeftOf="@id/calendar_sp"
        app:layout_constraintLeft_toLeftOf="parent"/>
    <Spinner
        android:id="@+id/calendar_sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/calendar_ly"
        app:layout_constraintBottom_toTopOf="@id/calendar_et"
        app:layout_constraintLeft_toRightOf="@id/calendar_tv"
        app:layout_constraintRight_toRightOf="parent"
        android:entries="@array/station_array" />



    <EditText
        android:id="@+id/calendar_et"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@id/calendar_iv"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@id/calendar_submit_bt"
        app:layout_constraintTop_toBottomOf="@+id/calendar_ly" />

    <Button
        android:id="@+id/calendar_submit_bt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="calendarRecordClick"
        android:text="@string/modify_bt"
        app:layout_constraintBottom_toBottomOf="@+id/calendar_et"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toRightOf="@id/calendar_et"
        app:layout_constraintTop_toTopOf="@+id/calendar_et" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/calendar_iv"
        android:orientation="horizontal"
        android:paddingLeft="5dp"
        android:paddingRight="5dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/calendar_et"
        app:layout_constraintBottom_toTopOf="@id/calendar_rv">
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/planting" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:textAlignment="center"
            android:text="@string/calendar_marker"/>

    </LinearLayout>
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/calendar_rv"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="32dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/calendar_iv" />

</androidx.constraintlayout.widget.ConstraintLayout>